<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Thời Khoá Biểu Bách Khoa</string>
    <string name="nav_calendar">Lịch học</string>
    <string name="nav_todo">Công việc</string>
    <string name="nav_note">Ghi chú</string>
    <string name="nav_setting">Cài đặt</string>
    <string name="todo_float_button">Thêm công việc</string>
    <string name="todo_meeting_button">Cuộc họp mới</string>
    <string name="todo_meeting_form">Cuộc họp</string>
    <string name="todo_meeting_form_time">Thời gian:</string>
    <string name="todo_meeting_form_subtile">Tiêu đề:</string>
    <string name="todo_meeting_form_location">Địa điểm:</string>
    <string name="todo_meeting_form_link">Liên kết:</string>
    <string name="todo_meeting_form_alert">Báo trước:</string>
    <string name="todo_meeting_form_dialog_title">Cài đặt báo trước</string>
    <string name="todo_meeting_form_hour">Giờ</string>
    <string name="todo_meeting_form_minus">Phút</string>
    <string name="todo_meeting_form_year">Năm</string>
    <string name="todo_meeting_form_month">Tháng</string>
    <string name="todo_meeting_form_day">Ngày</string>
    <string name="todo_done">Xong</string>
    <string name="todo_save">Lưu</string>
    <string name="todo_clear">Xóa</string>
    <string name="todo_cancel">Hủy</string>
    <string name="todo_assignment_button">Bài tập mới</string>
    <string name="todo_assignment_form">Bài tập</string>
    <string name="todo_assignment_form_list">Danh sách công việc</string>
    <string name="bk_timetable">Thời khoá biểu BK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Thêm</string>
    <string name="select_all">Chọn tất cả</string>
    <string name="Cancel">Huỷ</string>
    <string name="todo_assignment_form_list_add_list">Thêm công việc mới</string>
    <string name="log_in">Đăng nhập</string>
    <string name="username">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="calendar_pager">Thời khóa biểu gọn gàng, thao tác trên các môn học nhanh chóng và tiện lợi.</string>
    <string name="todo_pager">Dễ dàng lưu trữ thông tin buổi họp và theo dõi tiến trình bài tập.</string>
    <string name="bk_calendar_pager">Thực hiện thêm TKB Bách Khoa tự động hoặc tự tạo TKB thủ công cho chính bạn.</string>
    <string name="note_pager">Danh sách ghi chú giúp bạn ghi lại những thông tin cần thiết trong buổi học.</string>
    <string name="calendar_pager_heading">Thời khoá biểu/Lịch học</string>
    <string name="todo_heading">Cuộc họp/Bài tập</string>
    <string name="note_heading">Ghi chú/Lời nhắc</string>
    <string name="bk_calendar_heading">Thời khoá biểu Bách Khoa</string>
    <string name="skip">Bỏ qua</string>
    <string name="finish">Hoàn Tất</string>
    <string name="note">Ghi chú</string>
    <string name="add_note">Tạo ghi chú mới</string>
    <string name="note_heading_hint">Tiêu đề</string>
    <string name="content_hint">Nội dung</string>
    <string name="delete_note">Xoá ghi chú</string>
</resources>