<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddnoteFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_note_heading"
        android:padding="10dp"
        android:background="@color/nav_primary">

        <TextView
            android:id="@+id/add_note_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/back_btn_note"
            android:text="@string/add_note"
            android:textColor="@color/black"
            android:textSize="@dimen/headings"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/back_btn_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/nav_primary"
            android:src="@drawable/ic_back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:id="@+id/done_txt"
            android:text="XONG"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <EditText
        android:id="@+id/note_heading_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_note_heading"
        android:hint="@string/note_heading_hint"
        android:paddingHorizontal="20dp"
        android:lines="3" />

    <EditText
        android:id="@+id/note_content_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_heading_editText"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/content_hint"
        android:paddingHorizontal="20dp"
        android:paddingBottom="10dp"
        android:lines="30" />


</RelativeLayout>