<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/default_todo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/default_image"
        android:layout_centerInParent="true"
        android:visibility="visible"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/todo_meet_item_recycleView"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:overScrollMode="always"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:id="@+id/todo_float_button_background"
        android:layout_width="170px"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:paddingBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/todo_float_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/todo_assignment_button"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo_float_button"
            android:elevation="10dp"
            android:src="@drawable/icon_add"
            app:collapsedSize="@dimen/float_button"
            app:fabSize="mini" />

        <Button
            android:id="@+id/todo_meeting_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="60dp"
            android:text="@string/todo_meeting_button"
            android:textAllCaps="false"
            android:textSize="@dimen/button"
            android:visibility="gone"
            app:cornerRadius="@dimen/button_radius" />

        <Button
            android:id="@+id/todo_assignment_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/todo_meeting_button"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="60dp"
            android:text="@string/todo_assignment_button"
            android:textAllCaps="false"
            android:textSize="@dimen/button"
            android:visibility="gone"
            app:cornerRadius="@dimen/button_radius" />

    </RelativeLayout>

</RelativeLayout>