<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/todo_meet_form_add_time_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog"
    android:visibility="visible"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/nav_title"
            android:text="@string/todo_meeting_form_dialog_title"
            android:textStyle="bold"
            android:textColor="@color/nav_primary"
            android:textAlignment="center"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/todo_meet_form_pick_dialog"

            android:drawableBottom="@drawable/line"
            android:drawablePadding="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <ImageView
            android:id="@+id/todo_meet_form_dialog_close"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/icon_close"

            android:paddingTop="10dp"
            android:paddingRight="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <LinearLayout
            android:id="@+id/todo_meet_form_pick_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:orientation="horizontal"
            android:gravity="center"

            android:paddingBottom="10dp"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginRight="10dp"
                >

                <TextView
                    android:id="@+id/todo_meet_form_hour_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todo_meeting_form_hour"
                    android:textSize="@dimen/button"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="center"

                    android:layout_marginLeft="18dp"
                    />

                <NumberPicker
                    android:id="@+id/meet_form_hour_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/todo_meet_form_hour_dialog"
                    android:theme="@style/todo_number_picker" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                >

                <TextView
                    android:id="@+id/todo_meet_form_minus_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todo_meeting_form_minus"
                    android:textSize="@dimen/button"
                    android:textColor="@color/black"
                    android:textStyle="bold"

                    android:layout_marginLeft="13dp"
                    />

                <NumberPicker
                    android:id="@+id/meet_form_minus_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/todo_meet_form_minus_dialog"

                    android:theme="@style/todo_number_picker" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/meet_form_button_dialog_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_save"

            style="@style/button_primary"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>